--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/scss/main.scss" />
     <script src="main.js" defer type="module"></script>
     <title>SR Humorprogram</title>
   </head>
