--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="widht=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
     <meta name="viewport" content="widht=device-width, initial-scale=1.0" />
     <link
@@ -12,17 +15,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/scss/main.scss" />
-    <script src="main.js" defer type="module"></script>
+    <script src="src/ts/main.ts" defer type="module"></script>
 
     <title>SR Humorprogram</title>
   </head>
   <body>
     <section class="section__podlist">
-      <button class="section__podlist-button toggle-btn" tabindex="1">Välj ljust läge</button>
+      <button class="section__podlist-button toggle-btn" tabindex="1">
+        Välj ljust läge
+      </button>
       <h1>SRs Humorprogram</h1>
-      <article class="section__podlist-pods">
-      </article>
+      <article class="section__podlist-pods"></article>
     </section>
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
