--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
       rel="stylesheet"
     />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="src/scss/main.scss" />
     <script src="src/ts/main.ts" defer type="module"></script>
 
@@ -21,7 +15,7 @@
   </head>
   <body>
     <section class="section__podlist">
-      <button class="section__podlist-button toggle-btn" tabindex="1">
+      <button class="section__podlist-button toggle-btn">
         Välj ljust läge
       </button>
       <h1>SRs Humorprogram</h1>
